IW-91 Fix: Background image overlaps with text on iPhone 6s

--- a/src/pages/Landing/sections/Header/index.styl
+++ b/src/pages/Landing/sections/Header/index.styl
@@ -9,6 +9,7 @@
     padding: 40px
     background url(./images/main-art-mobile@2x.png) center bottom no-repeat
     background-size 100% auto
+    height: auto
 
   .content
     display flex
@@ -41,7 +42,7 @@
 
       .heading
         +iphone()
-          margin-bottom: 0
+          margin: 24px 0
 
       .paragraph
         opacity 0.8
